# python_project_uv_flask_webapp_demo

./: .dockerignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: flask_app_test.yml
configs/: app_config.py
configs/logging_configs/: logger_configure.json  mylogger.py  queued_file.json  setup_logging.py
data/: raw.csv
exceptions/: custom_exceptions.py
logs/: flask_app_log.jsonl
src/: __main__.py  app.py  get_data.py
src/home_page/: routes.py
src/posts/: routes.py
src/requests/: routes.py
src/templates/: get_post.html  home.html
src/utils/: setup_logging.py
tests/functional/: READMD.md  README.md  conftest.py  test_home.py  test_posts.py  test_requests.py
tests/unit/: README.md  test_get_data.py
tests/unit/test_data/: non_empty.csv
