[project]
name = "demo_uv_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "flask>=3.1.0",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "requests>=2.32.3",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
flask_app = "src.__main__:main"
